<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/NIM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/NIM"
                android:textColor="#D8D8D8"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/NIM_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/nunito_sans_light"
                android:text="@string/NIM_value"
                android:textColor="#D8D8D8" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/name"
                android:textColor="#D8D8D8"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/name_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/name_value"
                android:textColor="#D8D8D8" />

            <TextView
                android:id="@+id/fotodiri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/fotodiri"
                android:textColor="#D8D8D8"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/fotodiri_value"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/placeholder"
                app:srcCompat="@drawable/foto" />

            <TextView
                android:id="@+id/hobby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/hobby"
                android:textColor="#D8D8D8"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/hobby_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/hobby_value"
                android:textColor="#D8D8D8" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/desc"
                android:textColor="#D8D8D8"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/desc_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/desc_value"
                android:textColor="#D8D8D8" />

            <Button
                android:id="@+id/alamat"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-12dp"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/alamat"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#D8D8D8"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/alamat_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/alamat_value"
                android:textColor="#D8D8D8" />

            <Button
                android:id="@+id/telp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-12dp"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/telp"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#D8D8D8"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/telp_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/telp_value"
                android:textColor="#D8D8D8" />

            <Button
                android:id="@+id/email"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-12dp"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/email"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#D8D8D8"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/email_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/email_value"
                android:textColor="#D8D8D8" />

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>